[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.128.0",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "llama-cpp-python>=0.3.16",
    "mlx>=0.30.6; platform_system == 'Darwin'",
    "numpy>=2.3.5",
    "pillow>=12.1.0",
    "pip>=25.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "65dc261512cbdb1ee72b88ae5b222f2605aad8e5" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
